--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed": "NODE_ENV=development node src/utils/seed.js",
+    "dev": "nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^9.4.0",
     "@prisma/client": "^6.3.1",
+    "bcryptjs": "^2.4.3",
     "express": "^4.21.2",
+    "faker": "^5.5.3",
     "pg": "^8.13.1",
     "prisma": "^6.3.1"
   },
