add: routes (register, login, me, get users, get user, get me) in progress..

--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@faker-js/faker": "^9.4.0",
     "@prisma/client": "^6.3.1",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "faker": "^5.5.3",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "pg": "^8.13.1",
     "prisma": "^6.3.1"
   },
