package.json fix

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "nodemon src/server.js",
     "start": "node src/server`.js",
     "build": "npm install && prisma generate",
-    "prisma:migrate": "prisma migrate deploy",
+    "prisma:migrate": "prisma migrate deploy"
   },
   "keywords": [],
   "author": "",
