--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed": "NODE_ENV=development node src/utils/seed.js",
     "dev": "nodemon src/server.js",
-    "start": "node src/server.js",
+    "start": "npx prisma migrate deploy && node src/server.js",
     "build": "npm install && prisma generate",
     "prisma:migrate": "prisma migrate deploy"
   },
